apps/production/wordpress-micah-mmm-v2/patch-wordpress-config-extra.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
spec:
  template:
    spec:
      containers:
        - name: wordpress
