apps/production/wordpress-micah-mmm-v2/patch-wordpress-offline.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
spec:
  replicas: 0
